--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,25 +1,22 @@
-name: run main.py
+name: Hello World Workflow
 
 on:
   schedule:
-    - cron: '0 0 * * 1' # At 00:00 on Monday
+    - cron: '*/30 * * * *'  # Run every 30 minutes
+  workflow_dispatch: #Allow manual triggering of the workflow
 
 jobs:
-  build:
+  hello_world_job:
     runs-on: ubuntu-latest
+
     steps:
-      - name: checkout repo content
-        uses: actions/checkout@v2 # checkout the repository content
+    - name: Check out code
+      uses: actions/checkout@v2
 
-      - name: setup python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10' # install the python version needed
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'
 
-      - name: install python packages
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: execute py script # run main.py
-        run: python main.py
+    - name: Run hello.py
+      run: python hello.py
